--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,11 +27,6 @@ services:
   nginx:
     image: nginx:latest
     container_name: ${COMPOSE_PROJECT_NAME}_nginx
-    build:
-      context: ./
-      args:
-        - "BUILD_ARGUMENT_ENV=dev"
-      dockerfile: ./docker/nginx/Dockerfile
     ports:
       - "80:80"
     volumes:
@@ -65,6 +60,33 @@ services:
     container_name: ${COMPOSE_PROJECT_NAME}_redis
     ports:
       - "6379:6379"
+    networks:
+      internal:
+  kafka:
+    image: 'bitnami/kafka:latest'
+    container_name: ${COMPOSE_PROJECT_NAME}_kafka
+    networks:
+      internal:
+    ports:
+      - '9092:9092'
+    environment:
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+  kafka-ui:
+    container_name: ${COMPOSE_PROJECT_NAME}_kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
+    environment:
+      DYNAMIC_CONFIG_ENABLED: 'true'
+      KAFKA_CLUSTERS_0_NAME: wizard_test
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     networks:
       internal:
 networks:
