--- a/app/config/packages/messenger.yaml
+++ b/app/config/packages/messenger.yaml
@@ -4,18 +4,25 @@ framework:
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            async:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
-                options:
-                    use_notify: true
-                    check_delayed_interval: 60000
-                retry_strategy:
-                    max_retries: 3
-                    multiplier: 2
             failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
+            rabbit_transport:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                retry_strategy:
+                    max_retries: 1
+                    delay: 1000
+                    multiplier: 1
+                    max_delay: 0
+                options:
+                    exchange:
+                        name: high
+                    queues:
+                        messages_high: ~
             kafka_transport:
                 dsn: '%env(KAFKA_URL)%'
+                failure_transport: failed
+                retry_strategy:
+                    max_retries: 0
                 # serializer: App\Infrastructure\Messenger\MySerializer
                 options:
                     flushTimeout: 10000
@@ -30,10 +37,7 @@ framework:
                         enable.auto.offset.store: 'false'
                         group.id: 'my-group-id' # should be unique per consumer
         routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
-            Symfony\Component\Notifier\Message\ChatMessage: async
-            Symfony\Component\Notifier\Message\SmsMessage: async
-            App\Message\KafkaMessage: kafka_transport
+            App\Messenger\Message\Message: kafka_transport
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
